[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/green.png" type="Texture" id=1]
[ext_resource path="res://scenes/Teleporter.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Teleporter" type="Node2D"]
script = ExtResource( 2 )

[node name="Pad1" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Pad1"]
position = Vector2( -64, 0 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pad1"]
position = Vector2( -64, 0 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="Pad1"]
position = Vector2( -64, 0 )

[node name="Pad2" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Pad2"]
position = Vector2( 64, 0 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pad2"]
position = Vector2( 64, 0 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="Pad2"]
position = Vector2( 64, 0 )
[connection signal="body_entered" from="Pad1" to="." method="_on_Pad1_body_entered"]
[connection signal="body_exited" from="Pad1" to="." method="_on_Pad1_body_exited"]
[connection signal="body_entered" from="Pad2" to="." method="_on_Pad2_body_entered"]
[connection signal="body_exited" from="Pad2" to="." method="_on_Pad2_body_exited"]
